--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,22 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+# Maven #
+/target/
+
+# Eclipse #
+/.classpath
+/.project
+/.settings/
+
+# IntelliJ #
+/.idea/
+/*.iml
+
+# Apple #
+.DS_Store
+
+# VIM editor #
+.*.swp
