ADD: a branch with a demo to use TextArea for JobSpec, one needs to "link" against specific non-official bugfixed version of ui-swing from: https://github.com/maarzt/scijava-ui-swing.git, branch fix-text-area

--- a/pom.xml
+++ b/pom.xml
@@ -91,5 +91,10 @@
       <groupId>net.imagej</groupId>
       <artifactId>imagej-ops</artifactId>
     </dependency>
+    <dependency>
+		<groupId>org.scijava</groupId>
+		<artifactId>scijava-ui-swing</artifactId>
+		<version>0.9.3-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
