Add missing dependency

--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,10 @@
       <groupId>net.imagej</groupId>
       <artifactId>imagej-ops</artifactId>
     </dependency>
+	  <dependency>
+		  <groupId>org.jhotdraw</groupId>
+		  <artifactId>jhotdraw</artifactId>
+		  <version>7.6.0</version>
+	  </dependency>
   </dependencies>
 </project>
