FIX: Loading of images changed to IJ1 as IJ2 had a bug...

--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,15 @@
       <groupId>net.imagej</groupId>
       <artifactId>imagej-ops</artifactId>
     </dependency>
+
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>ij</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>imagej-legacy</artifactId>
+		</dependency>
+
   </dependencies>
 </project>
