ADD: missing dependency

--- a/CTC-related/pom.xml
+++ b/CTC-related/pom.xml
@@ -100,5 +100,10 @@
       <artifactId>CTC-paper-FijiPlugins</artifactId>
       <version>1.2-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.jhotdraw</groupId>
+      <artifactId>jhotdraw</artifactId>
+      <version>7.6.0</version>
+    </dependency>
   </dependencies>
 </project>
