--- a/CTC-related/pom.xml
+++ b/CTC-related/pom.xml
@@ -105,5 +105,10 @@
       <artifactId>jhotdraw</artifactId>
       <version>7.6.0</version>
     </dependency>
+    <dependency>
+      <groupId>net.trackmate</groupId>
+      <artifactId>trackmate</artifactId>
+      <version>1.0.0-beta-7-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
