--- a/CTC-related/pom.xml
+++ b/CTC-related/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.scijava</groupId>
     <artifactId>pom-scijava</artifactId>
-    <version>22.3.0</version>
+    <version>25.0.0</version>
     <relativePath />
   </parent>
 
@@ -108,7 +108,7 @@
     <dependency>
       <groupId>net.trackmate</groupId>
       <artifactId>trackmate</artifactId>
-      <version>1.0.0-beta-8</version>
+      <version>1.0.0-beta-13-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
