--- a/CTC-related/pom.xml
+++ b/CTC-related/pom.xml
@@ -110,5 +110,10 @@
       <artifactId>trackmate</artifactId>
       <version>1.0.0-beta-13-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.mastodon</groupId>
+      <artifactId>mastodon-tomancak</artifactId>
+      <version>0.1.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
