--- a/CTC-paper/pom.xml
+++ b/CTC-paper/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>de.mpicbg.ulman</groupId>
   <artifactId>CTC-paper-FijiPlugins</artifactId>
-  <version>1.3.0-SNAPSHOT</version>
+  <version>1.4.0</version>
 
 	<organization>
 		<name>MPI-CBG</name>
