--- a/CTC-paper/pom.xml
+++ b/CTC-paper/pom.xml
@@ -65,7 +65,7 @@
 
 	<scm>
 		<connection>scm:git:git://github.com/xulman/CTC-FijiPlugins</connection>
-		<developerConnection>scm:git:localhost:9999</developerConnection>
+		<developerConnection>scm:git:git://github.com/xulman/CTC-FijiPlugins</developerConnection>
 		<tag>HEAD</tag>
 		<url>https://github.com/xulman/CTC-FijiPlugins</url>
 	</scm>
@@ -85,8 +85,8 @@
 
   <repositories>
     <repository>
-      <id>imagej.public</id>
-      <url>http://maven.imagej.net/content/groups/public</url>
+      <id>scijava.public</id>
+      <url>https://maven.scijava.org/content/groups/public</url>
     </repository>
   </repositories>
 
