ADD,FIX: poms have explicit <package-name> because the automatic module name          deduction was failing (which needed to take place since the property          was not present)

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
 	</ciManagement>
 
 	<properties>
+		<package-name>de.mpicbg.ulman.ctc</package-name>
 		<license.licenseName>cc0</license.licenseName>
 		<license.copyrightOwners>N/A</license.copyrightOwners>
 		<license.projectName>CTC-FijiPlugins</license.projectName>
