--- a/CTC-related/pom.xml
+++ b/CTC-related/pom.xml
@@ -106,12 +106,6 @@
       </exclusions>
     </dependency>
 
-    <!-- to start and test the plugin (from the ImageJ GUI) -->
-    <dependency>
-      <groupId>net.imagej</groupId>
-      <artifactId>imagej</artifactId>
-    </dependency>
-
     <!-- the "main paper"-part of this project -->
     <dependency>
       <groupId>de.mpicbg.ulman</groupId>
@@ -131,6 +125,12 @@
       <groupId>net.trackmate</groupId>
       <artifactId>trackmate</artifactId>
       <version>1.0.0-beta-13-SNAPSHOT</version>
+    </dependency>
+
+    <!-- for GTviaMarkers and to start and test plugins (from the ImageJ GUI) -->
+    <dependency>
+      <groupId>net.imagej</groupId>
+      <artifactId>imagej</artifactId>
     </dependency>
   </dependencies>
 </project>
